# log-explorer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
app/: Home.py  prompts.py  renderings.py
app/configs/: config.py  logger.py
app/pages/: 1_Log_Explorer.py  2_Embeddings.py
app/scripts/: generate_logs.py
app/services/: explainer_service.py  generator_service.py  scraper_service.py  search_service.py  vectorstore_service.py
